# morel

./: .gitignore  Cargo.toml  NOTES.md  README.md
.github/workflows/: ci.yml
morel/: Cargo.toml  README.md
morel-python/: Cargo.toml  LICENSE-APACHE  README.md  pyproject.toml
morel-python/examples/: channels_and_workers.py  csv_replay_and_optional_async.py  custom_operator_spread.py  market_signal_pipeline.py  quick_start.py  recording_replay.py  replay_word_count.py  run_all.py  windowed_sensor_monitor.py
morel-python/python/morel/: __init__.py
morel-python/src/: async_io.rs  channel.rs  csv.rs  custom.rs  error.rs  graph.rs  lib.rs  recording.rs  stream.rs  value.rs
morel-python/src/ops/: batch.rs  combine.rs  mod.rs  stateful.rs  stateless.rs
morel-python/tests/: test_async_io.py  test_batch_combine_ops.py  test_channels_workers.py  test_custom_operator.py  test_graph_run.py  test_import.py  test_public_api.py  test_recording_csv.py  test_stateful_numeric_ops.py  test_stateless_ops.py
morel/benchmarks/: README.md  graph.rs  workloads.rs
morel/examples/: README.md  async_consumer.rs  channels_workers.rs  csv_replay.rs  custom_operator.rs  fan_in_control.rs  operator_gallery.rs  quick_start.rs  recording_json.rs  recording_replay.rs  stateful_word_count.rs  timed_sensor_windows.rs
morel/src/: lib.rs
morel/src/adapters/: csv.rs  mod.rs  record.rs  replay.rs
morel/src/channel/: error.rs  mod.rs  ops.rs  producer.rs  wire.rs  worker.rs
morel/src/core/: engine.rs  graph.rs  mod.rs  port.rs  run.rs  time.rs  waker.rs
morel/src/io/: consumer.rs  error.rs  mod.rs  producer.rs  runtime.rs
morel/src/ops/: batch.rs  combine.rs  mod.rs  source.rs  stateful.rs  stateless.rs  timed.rs
morel/tests/: adapters_csv.rs  adapters_persist.rs  adapters_record.rs  adapters_replay.rs  async_io_consumer.rs  async_io_producer.rs  async_io_runtime.rs  channels_live.rs  channels_replay.rs  determinism.rs  live.rs  replay.rs  workers.rs
