[package]
name = "morel-python"
version = "0.1.0"
edition = "2021"
rust-version = "1.82"
authors = ["Karan Chawla"]
description = "Python bindings for the Morel stream processor."
license = "MIT OR Apache-2.0"
repository = "https://github.com/karanchawla/morel"
homepage = "https://github.com/karanchawla/morel"
readme = "README.md"
publish = false

[lib]
name = "_morel"
crate-type = ["cdylib", "rlib"]

[features]
default = []
serde = ["morel/serde", "dep:serde", "dep:serde_json"]
async-io = ["morel/async-io", "dep:futures-util"]

[dependencies]
csv = "1.3"
futures-util = { version = "0.3", optional = true }
morel = { path = "../morel" }
pyo3 = { version = "0.27" }
serde = { version = "1.0", optional = true, features = ["derive"] }
serde_json = { version = "1.0", optional = true }
