[package]
name = "morel"
version = "0.1.0"
edition = "2021"
rust-version = "1.82"
authors = ["Karan Chawla"]
description = "Deterministic, low-latency stream processing with live execution and replay."
license = "MIT OR Apache-2.0"
repository = "https://github.com/karanchawla/morel"
homepage = "https://github.com/karanchawla/morel"
readme = "README.md"
keywords = ["stream-processing", "dataflow", "replay", "low-latency", "async"]
categories = ["asynchronous", "concurrency"]

[dependencies]
crossbeam = "0.8"
csv = "1.3"
futures-core = { version = "0.3", optional = true }
futures-util = { version = "0.3", optional = true }
kanal = { version = "0.1.1", default-features = false }
quanta = "0.9"
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time"], optional = true }

[features]
async-io = ["dep:futures-core", "dep:futures-util", "dep:tokio", "kanal/async"]
net = ["async-io"]
serde = ["dep:serde", "dep:serde_json"]

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "graph"
path = "benchmarks/graph.rs"
harness = false

[[bench]]
name = "workloads"
path = "benchmarks/workloads.rs"
harness = false

[[example]]
name = "recording_json"
path = "examples/recording_json.rs"
required-features = ["serde"]

[[example]]
name = "async_consumer"
path = "examples/async_consumer.rs"
required-features = ["async-io"]

[[test]]
name = "adapters_persist"
required-features = ["serde"]

[[test]]
name = "async_io_runtime"
required-features = ["async-io"]

[[test]]
name = "async_io_producer"
required-features = ["async-io"]

[[test]]
name = "async_io_consumer"
required-features = ["async-io"]
